--- a/edcare-frontend/package.json
+++ b/edcare-frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0"
